--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
-<h1>Home</h1>
+<h1 class="title">Home</h1>
+<hr/>
 <p-panel class="ui-g-12 ui-md-4">
     <p-header>
         <div class="ui-helper-clearfix" style="text-align:center">
