--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,4 +1,6 @@
-<h1>Map</h1>
+<h1 class="title">Map</h1>
+<hr/>
+
 <div id="main" class="ui-g-12 ui-md-6" style="text-align:right">
   <svg width="960px" height="960px" style="max-width: 100%; max-height: 100%"></svg>
 </div>
