Changes to styles; Files for disciplines.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded fixed-top">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -27,3 +27,7 @@
 </nav>
 
 <router-outlet class="ui-g-12"></router-outlet>
+
+<footer class="navbar fixed-bottom navbar-light bg-faded">
+  <a class="navbar-brand" href="https://github.com/jeddai/star-wars-5e" target="_blank"><i class="fa fa-github"></i> Github</a>
+</footer>
