--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,37 +1,54 @@
 <h1 class="title">Home</h1>
 <hr/>
-<p-panel class="ui-g-12 ui-md-4">
-    <p-header>
+<div class="ui-grid ui-grid-responsive ui-fluid">
+  <div class="ui-grid-row">
+    <p-panel class="ui-grid-col-4 home-panel">
+      <p-header>
         <div class="ui-helper-clearfix" style="text-align:center">
-            <a routerLink="/map"><button pButton type="button" label="Map" icon="fa-map"></button></a>
+          <a routerLink="/map"><button pButton type="button" label="Map" icon="fa-map"></button></a>
         </div>
-    </p-header>
-    The map page contains a force-directed graph of the Star Wars universe. On this page, you can learn things about the planets in the Star Wars universe such as the climate and inhabitants. In addition, you can use the tool presented to find the shortest path between certain planets.
-</p-panel>
+      </p-header>
+      The map page contains a force-directed graph of the Star Wars universe. On this page, you can learn things about the planets
+      in the Star Wars universe such as the climate and inhabitants. In addition, you can use the tool presented to find the
+      shortest path between certain planets.
+    </p-panel>
 
-<p-panel class="ui-g-12 ui-md-4">
-    <p-header>
+    <p-panel class="ui-grid-col-4 home-panel">
+      <p-header>
         <div class="ui-helper-clearfix" style="text-align:center">
-            <a routerLink="/carousing"><button pButton type="button" label="Carousing" icon="fa-beer"></button></a>
+          <a routerLink="/carousing"><button pButton type="button" label="Carousing" icon="fa-beer"></button></a>
         </div>
-    </p-header>
-    The carousing page has a generator on it which will allow you to get random carousing results for your players.
-</p-panel>
+      </p-header>
+      The carousing page has a generator on it which will allow you to get random carousing results for your players.
+    </p-panel>
 
-<p-panel class="ui-g-12 ui-md-4">
-    <p-header>
+    <p-panel class="ui-grid-col-4 home-panel">
+      <p-header>
         <div class="ui-helper-clearfix" style="text-align:center">
-            <a routerLink="/force"><button pButton type="button" label="Force" icon="fa-rebel"></button></a>
+          <a routerLink="/force"><button pButton type="button" label="Force" icon="fa-rebel"></button></a>
         </div>
-    </p-header>
-    The force page is a compendium of the Star Wars 5e force disciplines and abilities.
-</p-panel>
+      </p-header>
+      The force page is a compendium of the Star Wars 5e force disciplines and abilities.
+    </p-panel>
+  </div>
+  <div class="ui-grid-row">
+    <p-panel class="ui-grid-col-4 home-panel">
+      <p-header>
+        <div class="ui-helper-clearfix" style="text-align:center">
+          <a routerLink="/combat"><button pButton type="button" label="Combat" icon="fa-list"></button></a>
+        </div>
+      </p-header>
+      The combat page is an initiative tracker. It uses the data from the monster compendium page to allow you to pull in and roll
+      HP and initiative for monsters, and it helps you keep track the state of combat all on one page.
+    </p-panel>
 
-<p-panel class="ui-g-12 ui-md-4">
-    <p-header>
+    <p-panel class="ui-grid-col-4 home-panel">
+      <p-header>
         <div class="ui-helper-clearfix" style="text-align:center">
-            <a routerLink="/combat"><button pButton type="button" label="Combat" icon="fa-list"></button></a>
+          <a routerLink="/monsters"><button pButton type="button" label="Monster Manual" icon="fa-empire"></button></a>
         </div>
-    </p-header>
-    The combat page is an initiative tracker. It uses the data from the monster compendium page to allow you to pull in and roll HP and initiative for monsters, and it helps you keep track the state of combat all on one page.
-</p-panel>
+      </p-header>
+      The monster manual page is a compendium of all of the Star Wars 5e monsters created for this conversion.
+    </p-panel>
+  </div>
+</div>
