--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,10 +1,14 @@
 <h1 class="title">Map</h1>
 <hr/>
 
-<div id="main" class="ui-g-12 ui-md-6" style="text-align:right">
-  <svg width="960px" height="960px" style="max-width: 100%; max-height: 100%"></svg>
-</div>
-<div class="ui-g-12 ui-md-6">
-  <small id="legend"></small>
-  <p>The distance calculator and settings are coming back soon!</p>
+<div class="ui-grid ui-grid-responsive">
+  <div class="ui-grid-row">
+    <div id="main" class="ui-grid-col-6" style="text-align:right">
+      <svg width="960px" height="960px" style="max-width: 100%; max-height: 100%"></svg>
+    </div>
+    <div class="ui-grid-col-6">
+      <small id="legend"></small>
+      <p>The distance calculator and settings are coming back soon!</p>
+    </div>
+  </div>
 </div>
