--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  padding-top: 50px;
+  padding-bottom: 60px;
+}
+
 .title {
   padding-left: 15px;
 }
