--- a/src/app/carousing/carousing.component.html
+++ b/src/app/carousing/carousing.component.html
@@ -1,2 +1,28 @@
 <h1 class="title">Carousing</h1>
 <hr/>
+
+<div class="ui-grid ui-grid-responsive">
+  <div class="ui-grid-row">
+    <div class="ui-grid-col-3">
+      <div class="form-group">
+        <label for="limit">Specific Result:</label>
+        <input type="number" pInputText placeholder="Specific Result" [(ngModel)]="specResult"/>
+      </div>
+      <div class="form-group">
+        <label for="limit">Results Limit:</label>
+        <input id="limit" type="number" pInputText placeholder="Limit Results" [(ngModel)]="limitResults"/>
+      </div>
+      <button pButton type="button" class="ui-button-primary" label="Go Carousing" iconPos="right" icon="fa-beer" (click)="roll()"></button>
+      <button pButton type="button" class="ui-button-primary" label="Clear" iconPos="right" icon="fa-times" (click)="res = []"></button>
+    </div>
+
+    <div class="ui-grid-col-9">
+      <ul class="list-group">
+        <li class="list-group-item justify-content-between" *ngFor="let r of res">
+          {{ r.result }}
+          <span class="badge badge-default badge-pill">{{ r.resultNumber }} of {{ r.maxNumber }}</span>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
