--- a/src/app/carousing/carousing.component.html
+++ b/src/app/carousing/carousing.component.html
@@ -5,15 +5,38 @@
   <div class="ui-grid-row">
     <div class="ui-grid-col-3">
       <div class="form-group">
-        <label for="limit">Specific Result:</label>
-        <input type="number" pInputText placeholder="Specific Result" [(ngModel)]="specResult"/>
+        <label for="result">Specific Result:</label>
+        <input id="result" type="text" pInputText placeholder="i.e: 57" [(ngModel)]="specResult"/>
       </div>
       <div class="form-group">
         <label for="limit">Results Limit:</label>
-        <input id="limit" type="number" pInputText placeholder="Limit Results" [(ngModel)]="limitResults"/>
+        <input id="limit" type="number" pInputText placeholder="i.e: 5" [(ngModel)]="limitResults"/>
       </div>
-      <button pButton type="button" class="ui-button-primary" label="Go Carousing" iconPos="right" icon="fa-beer" (click)="roll()"></button>
-      <button pButton type="button" class="ui-button-primary" label="Clear" iconPos="right" icon="fa-times" (click)="res = []"></button>
+      <div class="btn-group" role="group" aria-label="Basic example">
+        <button pButton type="button" class="ui-button-primary" label="Go Carousing" iconPos="right" icon="fa-beer" (click)="roll()"></button>
+        <button pButton type="button" class="ui-button-primary" label="Clear" iconPos="right" icon="fa-times" (click)="res = []"></button>
+      </div>
+      <hr/>
+      <div class="form-group">
+        <label for="participants">Number of Participants:</label>
+        <input id="participants" type="number" pInputText placeholder="i.e: 1" [(ngModel)]="numPlayers" (change)="updatePlayers()" min="1" max="4"/>
+      </div>
+      <div class="form-group" *ngIf="numPlayers >= 2">
+        <label for="participant1">Participant 1:</label>
+        <input id="participant1" type="text" pInputText placeholder="i.e: Player 1" [(ngModel)]="players[0]"/>
+      </div>
+      <div class="form-group" *ngIf="numPlayers >= 2">
+        <label for="participant2">Participant 2:</label>
+        <input id="participant2" type="text" pInputText placeholder="i.e: Player 2" [(ngModel)]="players[1]"/>
+      </div>
+      <div class="form-group" *ngIf="numPlayers >= 3">
+        <label for="participant3">Participant 3:</label>
+        <input id="participant3" type="text" pInputText placeholder="i.e: Player 3" [(ngModel)]="players[2]"/>
+      </div>
+      <div class="form-group" *ngIf="numPlayers == 4">
+        <label for="participant4">Participant 4:</label>
+        <input id="participant4" type="text" pInputText placeholder="i.e: Player 4" [(ngModel)]="players[3]"/>
+      </div>
     </div>
 
     <div class="ui-grid-col-9">
