--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,9 @@
       <li class="nav-item" [class.active]="isActive('force')">
         <a class="nav-link" routerLink="/force">Force</a>
       </li>
+      <li class="nav-item" [class.active]="isActive('magical-items')">
+        <a class="nav-link" routerLink="/magical-items">Magical Items</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/combat">Combat</a>
       </li>
