--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
         <a class="nav-link" routerLink="/combat">Combat</a>
       </li>
     </ul>
-    <button pButton type="button" class="ui-button-primary" label="Files" iconPos="right" icon="fa-external-link"></button>
+    <a href="https://drive.google.com/drive/folders/0B_Ii2UyVgIWuVlhUQ1hJTWdCWEk?usp=sharing" target="_blank"><button pButton type="button" class="ui-button-primary" label="Files" iconPos="right" icon="fa-external-link"></button></a>
   </div>
 </nav>
 
