--- a/src/app/carousing/carousing.component.html
+++ b/src/app/carousing/carousing.component.html
@@ -37,6 +37,7 @@
         <label for="participant4">Participant 4:</label>
         <input id="participant4" type="text" pInputText placeholder="i.e: Player 4" [(ngModel)]="players[3]"/>
       </div>
+      <small>Thanks to /u/Bellociraptor and /u/pbghin for creating the <a href="https://www.reddit.com/r/DnD/comments/3uunbt/the_bigger_badder_longer_uncut_d100_carousing/">d100 carousing table</a> I used for the most of the one participant results!</small>
     </div>
 
     <div class="ui-grid-col-9">
