Updated home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,11 +35,19 @@
     <p-panel class="ui-grid-col-4 home-panel">
       <p-header>
         <div class="ui-helper-clearfix" style="text-align:center">
-          <a routerLink="/combat"><button pButton type="button" label="Combat" icon="fa-list"></button></a>
+          <a routerLink="/magical-items"><button pButton type="button" label="Magical Items" icon="fa-magic"></button></a>
         </div>
       </p-header>
-      The combat page is an initiative tracker. It uses the data from the monster compendium page to allow you to pull in and roll
-      HP and initiative for monsters, and it helps you keep track the state of combat all on one page.
+      The magical items page is a compendium of the magical items created for the Star Wars 5e conversion.
+    </p-panel>
+
+    <p-panel class="ui-grid-col-4 home-panel">
+      <p-header>
+        <div class="ui-helper-clearfix" style="text-align:center">
+          <a routerLink="/combat"><button pButton type="button" label="Combat" icon="fa-shield"></button></a>
+        </div>
+      </p-header>
+      The combat page is an initiative tracker. It uses the data from the monster compendium page to allow you to pull in and roll HP and initiative for monsters, and it helps you keep track the state of combat all on one page.
     </p-panel>
 
     <p-panel class="ui-grid-col-4 home-panel">
