--- a/src/app/monster-manual/monster-manual.component.css
+++ b/src/app/monster-manual/monster-manual.component.css
@@ -1,3 +1,7 @@
-.panel-padding {
-  padding-top: 5px;
+#ability_scores>tbody {
+  text-align: center;
+}
+
+.center-text {
+  text-align: center;
 }
