--- a/src/app/monster-manual/monster-manual.component.html
+++ b/src/app/monster-manual/monster-manual.component.html
@@ -1,49 +1,43 @@
-<h1 class="title">Magical Items</h1>
-<p-dataTable [value]="items" expandableRows="true" #dt (onRowClick)="dt.toggleRow($event.data)" [rows]="15" [paginator]="true" [pageLinks]="5" [responsive]="true" [stacked]="stacked">
-  <p-header>List of Magical Items</p-header>
-  <p-column field="name" header="Name" [sortable]="true" [filter]="true"></p-column>
-  <p-column field="rarity" header="Rarity" [sortable]="true" [filter]="true">
-    <ng-template let-col let-item="rowData" pTemplate="body">
-      <span [style.color]="colors[item[col.field]]">{{ item[col.field] | capitalize }}</span>
-    </ng-template>
-  </p-column>
-  <p-column field="type" header="Type" [sortable]="true" [filter]="true">
-    <ng-template let-col let-item="rowData" pTemplate="body">
-      <span>{{ item[col.field] | capitalize }}</span>
-    </ng-template>
-  </p-column>
-  <p-column field="attunement" header="Attunement" [filter]="true" filterMatchMode="equals" [style]="{'overflow':'visible'}">
+<h1 class="title">Monster Manual</h1>
+<p-dataTable [value]="monsters" expandableRows="true" #dt (onRowClick)="dt.toggleRow($event.data)" [rows]="15" [paginator]="true" [pageLinks]="5" [responsive]="true" [stacked]="stacked">
+  <p-header>List of Star Wars Monsters/Enemies</p-header>
+  <p-column field="challenge" header="CR" [sortable]="true" [filter]="true" filterMatchMode="equals" [style]="{'overflow':'visible'}">
     <ng-template pTemplate="filter" let-col>
-      <p-dropdown [options]="attunementOptions" [style]="{'width':'100%'}" (onChange)="dt.filter($event.value,col.field,col.filterMatchMode)" styleClass="ui-column-filter"></p-dropdown>
+      <p-dropdown [options]="monsterManualService.crs" [style]="{'width':'100%'}" (onChange)="dt.filter($event.value,col.field,col.filterMatchMode)" styleClass="ui-column-filter"></p-dropdown>
     </ng-template>
-    <ng-template let-col let-item="rowData" pTemplate="body">
-      <span>{{ !!item[col.field] ? 'Required' : '–' }}</span>
+    <ng-template let-col let-monster="rowData" pTemplate="body">
+      <span >{{ monsterManualService.GetChallenge(monster[col.field]).label }}</span>
     </ng-template>
   </p-column>
-  <p-column field="notes" header="Notes"></p-column>
-  <ng-template let-item pTemplate="rowexpansion">
+  <p-column field="name" header="Name" [sortable]="true" [filter]="true"></p-column>
+  <p-column field="type" header="Type" [sortable]="true" [filter]="true">
+    <ng-template let-col let-monster="rowData" pTemplate="body">
+      <span >{{ monster[col.field] | capitalize }}</span>
+    </ng-template>
+  </p-column>
+  <p-column field="size" header="Size" [sortable]="true" [filter]="true" filterMatchMode="equals" [style]="{'overflow':'visible'}">
+    <ng-template pTemplate="filter" let-col>
+      <p-dropdown [options]="sizeFilter" [style]="{'width':'100%'}" (onChange)="dt.filter($event.value,col.field,col.filterMatchMode)" styleClass="ui-column-filter"></p-dropdown>
+    </ng-template>
+    <ng-template let-col let-monster="rowData" pTemplate="body">
+      <span>{{ monster[col.field] | capitalize }}</span>
+    </ng-template>
+  </p-column>
+  <p-column field="alignment" header="Alignment" [sortable]="true" [filter]="true">
+    <ng-template let-col let-monster="rowData" pTemplate="body">
+      <span>{{ monster[col.field] | capitalize }}</span>
+    </ng-template>
+  </p-column>
+  <p-column field="planets" header="Planet(s)">
+    <ng-template let-col let-monster="rowData" pTemplate="body">
+      <span>{{ monster[col.field] | capitalize }}</span>
+    </ng-template>
+  </p-column>
+  <ng-template let-monster pTemplate="rowexpansion">
     <div class="ui-g ui-grid ui-grid-responsive ui-fluid" style="font-size:16px;padding:20px">
       <div class="ui-g-2"></div>
       <div class="ui-g-8">
-        <div class="ui-grid-row">
-          <em>
-            {{ item.type | capitalize }}
-            <span *ngIf="!!item.sub_type">({{ item.sub_type }})</span>, {{ item.rarity }}
-            <span *ngIf="item.attunement"> (requires attunement)</span>
-          </em>
-        </div>
-        <hr/>
-        <div class="ui-grid-row" [innerHtml]="item.description">
-
-        </div>
-        <br/>
-        <div class="ui-grid-row">
-          <p>
-            <em>Notes: {{ item.notes }}</em>&nbsp;
-            <div *ngFor="let tag of item.tags">
-              <span class="badge badge-default">{{ tag }}</span>&nbsp;
-            </div>
-        </div>
+        <monster [monster]="monster"></monster>
       </div>
     </div>
   </ng-template>
