--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,8 +21,11 @@
       <li class="nav-item" [class.active]="isActive('magical-items')">
         <a class="nav-link" routerLink="/magical-items">Magical Items</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" [class.active]="isActive('combat')">
         <a class="nav-link" routerLink="/combat">Combat</a>
+      </li>
+      <li class="nav-item" [class.active]="isActive('monster-manual')">
+        <a class="nav-link" routerLink="/monster-manual">Monster Manual</a>
       </li>
     </ul>
     <a href="https://drive.google.com/drive/folders/0B_Ii2UyVgIWuVlhUQ1hJTWdCWEk?usp=sharing" target="_blank"><button pButton type="button" class="ui-button-primary" label="Files" iconPos="right" icon="fa-external-link"></button></a>
