--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -53,7 +53,7 @@
     <p-panel class="ui-grid-col-4 home-panel">
       <p-header>
         <div class="ui-helper-clearfix" style="text-align:center">
-          <a routerLink="/monsters"><button pButton type="button" label="Monster Manual" icon="fa-empire"></button></a>
+          <a routerLink="/monster-manual"><button pButton type="button" label="Monster Manual" icon="fa-empire"></button></a>
         </div>
       </p-header>
       The monster manual page is a compendium of all of the Star Wars 5e monsters created for this conversion.
